--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,11 @@ github_username:  jekyll
 # Build settings
 markdown: kramdown
 
-
 sass:
     sass_dir: assets/_sass
+
+
+
+
+story:
+  number_of_pages: 3
